[package]
name = "pallet-smultisig-rpc"
version = "0.1.0"
authors = ["Chengcheng-S <https://github.com/Chengcheng-S>"]
homepage = "https://github.com/Chengcheng-S/schain"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for the smultisig pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
smultisig-rpc-runtime-api = { version = "0.1.0", path = "./runtime-api" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-rpc = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
sp-weights = { version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }
