[package]
name = "smultisig-rpc-runtime-api"
version = "0.1.0"
authors = ["Chengcheng-S <https://github.com/Chengcheng-S>"]
homepage = "https://github.com/Chengcheng-S/schain"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Chengcheng-S/schain"
description = "Runtime API definition required by Smultisig RPC extensions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-smultisig = { version = "0.1.0", default-features = false, path = "../../../smultisig" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "pallet-smultisig/std",
    "frame-support/std",
]
